--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    //compile 'com.google.code.gson:gson:2.4'
+    compile 'com.android.support:support-v4:21.0.3'
 }
